# KitchenVisualizer

./: .gitignore  lwc.py  lwc1.py  main1.py  pyproject.toml  yolo_inference.py
app/: main.py
app/api/: endpoints.py
app/static/css/: styles.css
app/static/js/: scripts.js
app/templates/: base.html  index.html  upload.html
